Fix for font size on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -3,11 +3,21 @@ h1 {
     font-weight: 800;
 }
 
-.text {
-    /* margin-top: 200px; */
-}
-
 .page-heading {
     font-size: 3em!important;
     font-weight: 800!important;
+}
+
+@media only screen and (max-width: 600px) {
+    h1 {
+        font-size: 3em;
+    }
+
+    .page-heading {
+        font-size: 2.5em!important;
+    }
+  }
+
+.text {
+    /* margin-top: 200px; */
 }
